force-app/main/default/objects/Integrationsfehler__c/Integrationsfehler__c.object-meta.xml
<CustomObject>
    <description>One row per failed exchange with an external system. An import that swallows its errors reports an empty fleet as a clean fleet, which is the same failure the compliance engine refuses to make: silence is not compliance. The payload is kept so a failure can be diagnosed without asking the CPO to reproduce it.</description>
    <label>Integrationsfehler</label>
    <nameField>
        <displayFormat>IF-{00000}</displayFormat>
        <label>Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrationsfehler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>