force-app/main/default/objects/Integrationsfehler__c/fields/Kennung__c.field-meta.xml
<CustomField>
    <fullName>Kennung__c</fullName>
    <description>The EVSE-ID or location id the failure belongs to, when the failure is about one record rather than the whole call. A batch that fails on one of eight hundred rows must say which.</description>
    <label>Betroffene Kennung</label>
    <length>80</length>
    <type>Text</type>
</CustomField>