force-app/main/default/objects/Integrationsfehler__c/fields/Nachricht__c.field-meta.xml
<CustomField>
    <fullName>Nachricht__c</fullName>
    <description>What went wrong, in one readable sentence.</description>
    <label>Nachricht</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>