force-app/main/default/objects/Integrationsfehler__c/fields/Nutzlast__c.field-meta.xml
<CustomField>
    <fullName>Nutzlast__c</fullName>
    <description>The payload as received, truncated. Kept because a mapping defect is unreproducible without the shape that caused it - and asking a CPO to resend yesterday is not an option.</description>
    <label>Nutzlast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>