force-app/main/default/objects/Integrationsfehler__c/fields/Statuscode__c.field-meta.xml
<CustomField>
    <fullName>Statuscode__c</fullName>
    <description>HTTP status where there was one. Zero means the call never reached the endpoint.</description>
    <label>HTTP-Statuscode</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>