force-app/main/default/objects/Integrationsfehler__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>Which external system the exchange was with, e.g. OCPI. Kept as text rather than a picklist so adding a system does not require a metadata change during an incident.</description>
    <label>System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>