force-app/main/default/objects/Integrationsfehler__c/fields/Vorgang__c.field-meta.xml
<CustomField>
    <fullName>Vorgang__c</fullName>
    <description>The operation that failed, e.g. GET /locations. Enough to tell a credential problem from a mapping problem without opening the payload.</description>
    <label>Vorgang</label>
    <length>120</length>
    <type>Text</type>
</CustomField>